fixed grid spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ h1{margin-block: 1rem; border-bottom: solid yellow .5rem;
     grid-auto-flow: dense; gap: 1rem 0; padding: 0 4rem
 }
 
-.split > *{margin: 1rem 0}
+details.split > p{margin: 0}
+h1.split > p {margin: 1rem 0}
 
 .split > [lang="en"]{grid-column: 2; max-width: 25rem}
 
@@ -40,6 +41,7 @@ a:hover{color: var(--laso)}
     .split > :not(.numbering){grid-column: 2}
     .split > [lang="en"]{width: unset; max-width: 25rem}
     h1.split > [lang="en"]{margin-bottom:0}
-    .split > .sp{margin-top:0}
-    section.split > [lang="en"]{margin-bottom:.5rem}
+    h1.split > .sp{margin-top:0}
+    section.split > p{margin-bottom:0}
+    section.split > .sp:first-of-type
 }
